# local-first-checklist

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: validation.yml
docs/: data-format.md  design.md
local_first_checklist/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
